--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -152,6 +152,7 @@
                 android:src="@drawable/google" />
 
             <ImageView
+                android:id="@+id/facebook_sign_btn"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginStart="30dp"
