--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -12,7 +12,7 @@
         android:layout_height="55dp"
         android:background="@drawable/search_shadow"
         android:gravity="center_vertical"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -20,24 +20,32 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
-        <EditText
-            android:id="@+id/editTextTextPersonName"
-            android:layout_width="wrap_content"
+        <SearchView
+            android:id="@+id/edt_search_news"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:background="@null"
-            android:drawableStart="@drawable/ic_baseline_search_24"
-            android:drawablePadding="5dp"
-            android:ems="15"
-            android:hint="Search in feed"
-            android:inputType="textPersonName"
-            android:letterSpacing="0.01"
-            android:textColorHint="#975858" />
+            android:queryHint="Search in feed"
+            android:layout_weight="5"
+            android:searchIcon="@drawable/ic_baseline_search_24"
+            android:iconifiedByDefault="false"
+            android:queryBackground="@android:color/transparent"
+            />
+        <ImageView
+            android:id="@+id/img_logout"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:src="@drawable/logout"/>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:visibility="visible"
+        tools:listitem="@layout/item_recyclerview"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         app:layout_constraintVertical_bias="0.0" />
