--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Login"
+            android:text="@string/login"
             android:textColor="@color/white"
             android:background="@drawable/sign_up_bg"
             android:textSize="18sp"
@@ -38,7 +38,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Sign Up"
+            android:text="@string/sign_up"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -125,7 +125,8 @@
                 android:text="Forget Password ?"
                 android:textColor="@color/red"
                 android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                tools:ignore="RtlHardcoded" />
         </LinearLayout>
 
         <TextView
